Mobile Spacing fix

--- a/assets/less/seriously.less
+++ b/assets/less/seriously.less
@@ -586,7 +586,7 @@
 
         .product {
             cursor: pointer;
-            padding: 0 0 7%;
+            padding: 0 0 @base-spacing*4;
             max-width:@maxwidth;
             margin: 0 auto;
             width: 100%;
@@ -970,6 +970,7 @@
                     float: left,
                 }
 
+                padding-bottom: @base-spacing*6;
                 .left_info,.details_container {
                     padding: @base-spacing*2;
                     padding-top: @base-spacing*6;
